# MezDisk

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
src/mezdisk/: cli.py  filetypes.py  models.py  render.py  scan.py  treemap.py  tui.py  util.py
tests/: conftest.py  test_scan.py  test_treemap_items.py
